# pythondata

./: LICENSE  README.md  data_config.yml  split_train_util.py  twutils.py
riskthinking/: README.md  data_config.yml  run_split_util.py
riskthinking/195/down/get_data/: pyproject.toml
riskthinking/195/down/get_data/src/get_data/: download_kaggle.py
riskthinking/195/down/twutils/: pyproject.toml
riskthinking/195/twsample/configure_data/: configure_data.py  pyproject.toml
riskthinking/195/twsample/twdatasample/: pyproject.toml
riskthinking/195/twsample/twdatasample/twdatasample/: run_model.py  train_model.py  twutils.py
riskthinking/195/twsample/twutils/: twutils.py
riskthinking/doc/: README.md  flow.dot
riskthinking/twsample/: README.md  data_config.yml  kaggle.env.template
riskthinking/twsample/aws/: ecr_create.sh  login.sh  push.sh  tag.sh
riskthinking/twsample/containers/: Dockerfile
riskthinking/twsample/doc/: README.md  flow.dot  python_flow.dot  steps.dot  todo.md
riskthinking/twsample/notebooks/: README.md  client_api_test.ipynb  etl.ipynb  get_data.ipynb  ml_training.ipynb
riskthinking/twsample/server/: client.py  server.py
riskthinking/twsample/twdatasample/: Dockerfile  pyproject.toml  shrink.sh
riskthinking/twsample/twdatasample/twdatasample/: api_server.py  configure_data.py  get_data.py  initial_setup.py  run_model.py  shrink_data.py  train_model.py  twutils.py
riskthinking/twsample/utils/: docker.debug.sh  smalldata.sh
