[tool.poetry]
name = "twdatasample"
version = "0.1.3"
description = ""
authors = ["Todd Wongkee <twongkee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
pandas = "^2.0.1"
joblib = "^1.2.0"
logging = "^0.4.9.6"
scikit-learn = "^1.2.2"
kaggle = "^1.5.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
