[tool.poetry]
name = "configure-data"
version = "0.1.0"
description = ""
authors = ["Todd Wongkee <twongkee@gmail.com>"]
readme = "README.md"
packages = [{include = "configure_data"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
